2012-09-06  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-13-02
        * Update JobOptions.

2012-09-04  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-13-01
        * Forgot const.

2012-08-24  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-13-00
        * Update corrupt events veto.
        * Move TrigT1CaloMonErrorTool to TrigT1CaloMonitoringTools.

2012-08-10  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-12-12
        * Add global error timing plot for Tier0.

2012-08-03  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-12-11
        * Add global error timing plot for online.

2012-08-01  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-12-10
        * Small fix to Lumiblock plot for Tier0.

2012-07-30  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-12-09
        * Coverity fixes.
        * Small fix to online Global Errors vs Lumiblock plot.

2012-07-25  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-12-08
        * Change OnlineTest property default back to false.

2012-07-25  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-12-07
        * Add more global error plots to help diagnosis.

2012-07-10  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-12-06
        * JobOptions update.

2012-07-06  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-12-05
        * Remove obsolete pedestal code from PPMSimBSMon.

2012-07-05  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-12-04
        * Mods to allow extended PPrStabilityMon to run on Tier0.

2012-07-03  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-12-03